--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 		    mouse_down_y = event.pageY;
 		    
 		    // console.log('mousedown:' + mouse_down_x,mouse_down_y); 
-		    return false; 
+		    // return false; 
 		});
 
 		
@@ -572,7 +572,7 @@
 	        	}
 	        	// console.log(currIndex);
 	        }
-	    	return false;
+	    	// return false;
 	  	});
 	</script>
 	<div class="foot-service clear" style="height: auto;">
