--- a/2.html
+++ b/2.html
@@ -7,10 +7,10 @@
 			width: 200px;
 			height: 200px;
 			border: 1px solid #eee;
-			background: red;
+			/*background: red;*/
 		}
 	</style>
-	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript">
 		$(document).bind("mousedown", function(event) {
 		    mouse_down_x = event.pageX;
