--- a/2.html
+++ b/2.html
@@ -7,7 +7,7 @@
 			width: 200px;
 			height: 200px;
 			border: 1px solid #eee;
-			/*background: red;*/
+			background: red;
 		}
 	</style>
 	<script type="text/javascript" src="js/jquery.js"></script>
@@ -15,7 +15,7 @@
 		$(document).bind("mousedown", function(event) {
 		    mouse_down_x = event.pageX;
 		    mouse_down_y = event.pageY;
-		    $("#div").css("background-color","red");
+		    $("#div").css("background-color","blue");
 		     
 		});
 
